# SutroYaro

./: .env.example  .gitignore  404.html  AGENT.md  AGENTS.md  AGENT_EVAL.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DISCOVERIES.md  GEMINI.md  LAB.md  README.md  TODO.md  flake.nix  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  survey.md  sync_telegram.ts
.claude/: README.md
.claude/hooks/: hook-common.cjs  security-guard.cjs  session-end.cjs  session-start.cjs
.claude/rules/: agent-coordination.md
.codex/: AGENTS.md
.github/workflows/: diagram-staleness.yml
.traces/: export_sessions.py
changelog/: index.html
checks/: baseline_check.py
context/: index.html
docs/: branch-workflow.md  changelog.md  context.md  getting-started.md  index.md  learning-guide.md  references_auto.md
docs/agent-prompts/: asi-evolve-algorithms-claude.md  asi-evolve-execution-qwen.md  asi-evolve-gemini-review.md  asi-evolve-memory-kimi.md  asi-evolve-synthesis-gemini.md  engram-offload.md  muon-review.md
docs/catchups/: 2026-03-22.md  index.md  meeting-10-report.md
docs/findings/: exp1_fix_hyperparams.md  exp4_grokfast.md  exp_a_ard_winning.md  exp_b_batch_ard.md  exp_c_perlayer_20bit.md  exp_cache_ard.md  exp_curriculum.md  exp_d_scaling.md  exp_e_forward_forward.md  exp_egd.md  exp_evolutionary.md  exp_feature_select.md  exp_fourier.md  exp_gf2_noise.md  exp_muon_review.md  exp_perlayer_batch.md  exp_sign_sgd.md  exp_wd_sweep.md  prompting-strategies.md  session-2026-03-11.md  sprint-1-findings.md
docs/google-docs/: bigger-picture.md  challenge-1-sparse-parity.md  how-to-search.md  meeting-1-energy-intro.md  meeting-6-notes.md  (+12 more)
findings/: exp1_fix_hyperparams.md  exp_b_batch_ard.md  exp_d_scaling.md  exp_dmc_optimize.md  exp_evolutionary.md  exp_feature_select.md  exp_gf2.md  exp_grokfast_curriculum.md  exp_grokfast_curriculum_dmd.md  exp_grokfast_curriculum_scale.md  exp_noprop.md  exp_perlayer_batch.md  exp_proxy_comparison.md  exp_sgd_speed.md
goals/: index.html
homework/: index.html
learning-guide/: index.html
lectures/: index.html
meeting-notes/: index.html
meetings/: index.html
references/: index.html
references_auto/: index.html
research/: index.html  log.jsonl  questions.yaml  search_space.yaml
results/: dmc_baseline_sweep.json  dmc_baseline_sweep.md  index.md  scoreboard.tsv
search/: search_index.json
src/: docs_config.json  harness.py  plot_dmc.py  sync_google_docs.py
telegram/: client.ts  config.ts  resolve-topic.ts  tg-read.ts  tg-send.ts  tg-topics.ts
tests/: conftest.py  test_bytedmd.py  test_bytedmd_gotchas.py  test_tracked_numpy.py
tooling/: index.html
(+225 files in other folders)
