[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sutro-yaro"
version = "0.1.0"
description = "Sutro Group research workspace for energy-efficient AI training"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
